@@ -41,7 +41,8 @@ all_by_module = {
                              'find_modules', 'header_property', 'html',
                              'xhtml', 'HTMLBuilder', 'parse_form_data',
                              'validate_arguments', 'ArgumentValidationError',
-                             'bind_arguments'],
+                             'bind_arguments', 'FileWrapper', 'wrap_file',
+                             'pop_path_info', 'peek_path_info'],
     'werkzeug.useragents':  ['UserAgent'],
     'werkzeug.http':        ['Accept', 'CacheControl', 'ETags', 'parse_etags',
                              'parse_date', 'parse_cache_control_header',
@@ -52,7 +53,9 @@ all_by_module = {
                              'HeaderSet', 'parse_authorization_header',
                              'parse_www_authenticate_header', 'MIMEAccept',
                              'WWWAuthenticate', 'Authorization',
-                             'remove_entity_headers', 'HTTP_STATUS_CODES'],
+                             'remove_entity_headers', 'is_entity_header',
+                             'remove_hop_by_hop_headers',
+                             'is_hop_by_hop_header', 'HTTP_STATUS_CODES'],
     'werkzeug.wrappers':    ['BaseResponse', 'BaseRequest', 'Request',
                              'Response', 'AcceptMixin', 'ETagRequestMixin',
                              'ETagResponseMixin', 'ResponseStreamMixin',
